--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <meta name="description"
         content="Find fonts and create fontkits by properties like category, supported languages, variable axes, OT features or supported styles">
 
+    <!--preload fonts-->
     <link rel="preload" href="fonts/Outfit/Outfit_latin_100-900.woff2" as="font" type="font/woff2" crossorigin>
-
-
 
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
@@ -32,11 +31,6 @@
 
     <link rel="stylesheet" href="lib/ps-icons/ps-icons.css">
     <script src="lib/ps-icons/ps-icons.js" defer></script>
-
-    <!-- 
-        <script src="lib/ps-style-inputs/ps-style-inputs.js" defer></script>
-    -->
-
 
     <!-- dialog -->
     <link rel="stylesheet" href="lib/ps-dialog/ps-dialog.css">
@@ -71,9 +65,6 @@
     <div class="layout grd grd-3 gap-2em details-wrap details-enhanced">
         <!-- toolbar -->
         <aside class="aside-toolbar scrollbar scroll-content pdd-1em">
-
-
-
             <header class="pst-sticky z-ind-100">
                 <!-- reset filters -->
                 <p><button type="button" class="btn-default bck-neg wdt-100 txt-cnt" id="btnResetFilter">
@@ -111,10 +102,8 @@
         <main class="main pdd-1em spn-2 --scrollbar --scroll-content">
 
             <article>
-
                 <nav class="nav-main pst-sticky --bck-clr-wht z-ind-1000">
                     <ul class="ul-nav li-inl fnt-wgh-700">
-
                         <li>
                             <label class="labelDarkmode --fnt-wgh-400">
                                 <span class="icon-wrp">
