--- a/item.html
+++ b/item.html
@@ -40,6 +40,13 @@
     <script src="lib/ps-icons/ps-icons.js" defer></script>
 
 
+    <link rel="stylesheet" href="lib/ps-style-inputs/ps-style-inputs.css">
+    <script src="lib/ps-style-inputs/ps-style-inputs.js" defer></script>
+
+    <script src="js/toggle_darkmode.js" defer></script> 
+
+
+
 
     <!--temporary font styles for previews -->
     <style id="stylePrevStatic"></style>
