--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <script src="js/save_favs.js" defer></script>
 
 
+    <script src="js/toggle_darkmode.js" defer></script>
+    <link rel="stylesheet" href="lib/ps-style-inputs/ps-style-inputs.css">
+    <script src="lib/ps-style-inputs/ps-style-inputs.js" defer></script>
 
     <style>
 
@@ -148,13 +151,11 @@
                         <span data-icon="github-solid"></span>
                     </a>
 
-
-                    <!-- 
-                    <img class="logo-img txt-cnt dsp-inl-blc wdt-10" src="img/logo/gff-logo.svg"
-                        alt="google font finder">
-                -->
-                    <img id="imgLogo" class="logo-img txt-cnt dsp-inl-blc wdt-10" src="img/logo/gffi-logo-animated.svg"
-                        alt="gffi">
+                    <svg class="svg-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 57.157 56.994"
+                        fill="currentColor">
+                        <path
+                            d="M45.3 7v-6.1c-7.9 1-10.9 5.5-10.9 12.7l0 12.7c0 4.4-1 7.4-2.9 9.3-.9 1-2.1 1.7-3.4 2.1l0 6.5c2.9-.6 5.6-2 7.8-4.1 3.2-3.1 4.7-7.6 4.7-13.8l0-7 9.4 0 0 7.8c0 7.7-2.5 13.3-6.4 17.2-4 4-9.4 6.4-15.5 6.4-12 0-21.9-9.8-21.9-21.8 0-11 5.9-17.5 11.4-20 0 0-2 2.9-2 8.8 0 2.6 0 11.2 0 11.2h6.3v-9.6h6.1v-5.9h-6.1v-.5c0-4.2 3.3-6.9 9.3-6.5l0-5.6-3.1 .2c-9 .7-15.1 3.2-19.9 8-5.3 5.3-8.2 12.4-8.2 19.9 0 15.5 12.6 28.1 28.1 28.1 7.7 0 14.7-3.1 19.8-8.1 5.1-5.1 8.4-11.7 8.4-23.1 0-3.7 0-6.5 0-6.5l0-5.7 0-.2h-15.7c0.1-3.7 1.4-5.7 4.7-6.4zm11.9-3a4 4 0 11-8.1 0 4 4 0 118.1 0" />
+                    </svg>
 
                     <h1 class="h1-main p txt-cnt em fnt-siz-1-5em">Gffi – a google font finder</h1>
                     <p class="p-intro txt-cnt">Find fonts by properties like category, supported
