bugfixes setting cache

--- a/index.html
+++ b/index.html
@@ -68,7 +68,17 @@
     <div class="layout grd grd-3 gap-2em details-wrap details-enhanced">
         <!-- toolbar -->
         <aside class="aside-toolbar scrollbar scroll-content pdd-1em">
+
+
+            <!--confirm api access-->
+            <details id="detailsPrivacy">
+                <summary>Privacy settings</summary>
+                <section id="confirmAccessWrap"></section>
+            </details>
+
+
             <header class="pst-sticky z-ind-100">
+
                 <!-- reset filters -->
                 <p><button type="button" class="btn-default bck-neg wdt-100 txt-cnt" id="btnResetFilter">
                         <svg viewBox="0 0 112 100" class="icn-svg icn-reload ">
