--- a/index.html
+++ b/index.html
@@ -79,12 +79,26 @@
 
             <header class="pst-sticky z-ind-100">
 
-                <!-- reset filters -->
-                <p><button type="button" class="btn-default bck-neg wdt-100 txt-cnt" id="btnResetFilter">
-                        <svg viewBox="0 0 112 100" class="icn-svg icn-reload ">
-                            <use href="#icn-reload"></use>
-                        </svg>
-                        Reset filter</button></p>
+
+                <section class="grd grd-1 grd-md-2 gap-0-5em">
+                    <!-- reset all settings -->
+                    <p>
+                        <button type="button" class="btn-default bck-neg wdt-100 txt-cnt" id="btnResetSettings">
+                            <span data-icon="close"></span>
+                            Reset all settings</button>
+                    </p>
+
+                    <!-- reset filters -->
+                    <p><button type="button" class="btn-default bck-neg wdt-100 txt-cnt" id="btnResetFilter">
+                            <svg viewBox="0 0 112 100" class="icn-svg icn-reload ">
+                                <use href="#icn-reload"></use>
+                            </svg>
+                            Reset filter</button></p>
+
+                </section>
+
+
+
             </header>
 
 
