--- a/info.html
+++ b/info.html
@@ -19,8 +19,9 @@
     <link rel="stylesheet" href="lib/details-enhanced/details-enhanced.css">
     <link rel="stylesheet" href="css/list.css">
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/UmemotoCtrl/mdpjs@0.1.4/js/mdp.js"></script>
 
-    <script type="module" src="lib/ps-loadmd/ps-loadmd.js"></script>
+    <script src="lib/ps-loadmd/ps-loadmd.js" defer></script>
 
     <!--icons -->
 
@@ -51,8 +52,8 @@
 </head>
 
 <body>
-    <main id="main" class="hentry pdd-1em"></main>
 
+    <main id="main" class="hentry pdd-1em" data-md="README.md"></main>
 
 </body>
 
