--- a/item.html
+++ b/item.html
@@ -49,22 +49,47 @@
     <style id="stylePrevStatic"></style>
     <style id="stylePrevVF"></style>
 
-
-
-
-
 </head>
 
 <body>
     <!-- load styles -->
     <style id="fontStyle"></style>
 
+    <header id="headerLogo" class="dsp-non pdd-1em ">
+        <p class="txt-cnt">
+            <a href="./">
+                <svg class="svg-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 57.157 56.994"
+                    fill="currentColor">
+                    <path
+                        d="M45.3 7v-6.1c-7.9 1-10.9 5.5-10.9 12.7l0 12.7c0 4.4-1 7.4-2.9 9.3-.9 1-2.1 1.7-3.4 2.1l0 6.5c2.9-.6 5.6-2 7.8-4.1 3.2-3.1 4.7-7.6 4.7-13.8l0-7 9.4 0 0 7.8c0 7.7-2.5 13.3-6.4 17.2-4 4-9.4 6.4-15.5 6.4-12 0-21.9-9.8-21.9-21.8 0-11 5.9-17.5 11.4-20 0 0-2 2.9-2 8.8 0 2.6 0 11.2 0 11.2h6.3v-9.6h6.1v-5.9h-6.1v-.5c0-4.2 3.3-6.9 9.3-6.5l0-5.6-3.1 .2c-9 .7-15.1 3.2-19.9 8-5.3 5.3-8.2 12.4-8.2 19.9 0 15.5 12.6 28.1 28.1 28.1 7.7 0 14.7-3.1 19.8-8.1 5.1-5.1 8.4-11.7 8.4-23.1 0-3.7 0-6.5 0-6.5l0-5.7 0-.2h-15.7c0.1-3.7 1.4-5.7 4.7-6.4zm11.9-3a4 4 0 11-8.1 0 4 4 0 118.1 0" />
+                </svg>
+            </a><br>
+            Back to font list
+        </p>
+    </header>
+
+
+
     <main id="mainItem" class="pdd-1em details-wrap details-enhanced details-plus dynamic-content dynamic-content-init">
         <header
             class="header-item dsp-flx alg-itm-cnt pst-sticky top-0 bck-clr-wht z-ind-1000 brd brd-btt mrg-1em mrg-btt">
             <h1 id="h1Title" class="fnt-siz-3em"></h1>
             <span class="label-wrp">
-                <span id="spanDesigners" class="label-designers"></span> &nbsp;
+                <!-- 
+                    <span id="spanLicence" class="label-licence"><a id="linkLicence"></a><span data-icon="info"></span>Licence</span> &nbsp;
+
+                -->
+
+
+
+                <!-- 
+                -->
+
+                <span id=""><span data-icon="user"></span> <span id="spanDesigners" class="label-designers"></span></span> &nbsp;
+
+
+                 &nbsp;
+
                 <span id="spanType" class="label-type"></span> &nbsp;
                 <button id="btnFav" class="btn-fav mrg-lft mrg-aut" data-fav="" title="Add to favorites">
                     <svg viewBox="0 0 114 100" class="icn-svg icn-heart  ">
