--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="lib/details-enhanced/details-enhanced.css">
     <link rel="stylesheet" href="css/list.css">
 
 
-    <!--icons -->
+    <!--details enhanced -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/herrstrietzel/details-enhanced@main/v1/details-enhanced.css">
     <!-- 
-        <script src="https://unpkg.com/feather-icons" defer></script>
+        <script src="https://cdn.jsdelivr.net/gh/herrstrietzel/details-enhanced@main/v1/details-enhanced.js" defer></script>
+
     -->
 
     <link rel="stylesheet" href="lib/ps-icons/ps-icons.css">
@@ -57,7 +58,7 @@
 </head>
 
 
-<body data-icon-sprite="lib/ps-icons/ps-icons.svg">
+<body data-icon-sprite="lib/ps-icons/ps-icons.svg" class="details-enhanced  details-plus">
 
 
     <!--dialog for font kits or info modals -->
@@ -65,7 +66,7 @@
     </dialog>
 
 
-    <div class="layout grd grd-3 gap-2em details-wrap details-enhanced">
+    <div class="layout grd grd-3 gap-2em ">
         <!-- toolbar -->
         <aside class="aside-toolbar scrollbar scroll-content pdd-1em">
 
