--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
 
 
     <!--details enhanced -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/herrstrietzel/details-enhanced@main/v1/details-enhanced.css">
     <!-- 
+            <link rel="stylesheet" href="lib/ps-details/ps-details.css">
+
+
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/herrstrietzel/details-enhanced@main/v1/details-enhanced.css">
+
         <script src="https://cdn.jsdelivr.net/gh/herrstrietzel/details-enhanced@main/v1/details-enhanced.js" defer></script>
 
     -->
@@ -59,6 +63,13 @@
 
 
 <body data-icon-sprite="lib/ps-icons/ps-icons.svg" class="details-enhanced  details-plus">
+
+
+    <!-- (viewBox(0,100,1000,500))
+    
+        <img src="img/fontPreviews/a.svg#abeezee" class="--svg-preview img-font-preview" alt="ABeeZee" loading="lazy">
+    
+    -->
 
 
     <!--dialog for font kits or info modals -->
