--- a/update.html
+++ b/update.html
@@ -18,8 +18,8 @@
     <script src="lib/ps-font-preview/renderText.js"></script>
 
 
-    <script src="js/fontlist_globals.js"></script>
-    <script src="js/getGfontQueryUrl.js"></script>
+    <script src="js/fontlist_globals.js" defer></script>
+    <script src="js/getGfontQueryUrl.js" defer></script>
 
     <!-- 
             <script src="js/ps-filter.js" defer></script>
@@ -40,7 +40,7 @@
 
 </head>
 
-<body>
+<body data-dir="">
 
     <main class="pdd-1em">
         <h1>Update Font list</h1>
