--- a/font/index.html
+++ b/font/index.html
@@ -86,7 +86,7 @@
 
     <main id="mainItem" class="pdd-1em details-wrap details-enhanced details-plus dynamic-content dynamic-content-init">
         <header
-            class="header-item dsp-flx alg-itm-cnt pst-sticky top-0 bck-clr-wht z-ind-1000 brd brd-btt mrg-1em mrg-btt">
+            class="header-item dsp-md-flx alg-itm-cnt pst-sticky top-0 bck-clr-wht z-ind-1000 brd brd-btt mrg-1em mrg-btt pdd-0-5em pdd-btt">
             <h1 id="h1Title" class="fnt-siz-3em"></h1>
             <span class="label-wrp">
 
