--- a/index.html
+++ b/index.html
@@ -62,13 +62,11 @@
 </head>
 
 
-<body data-icon-sprite="lib/ps-icons/ps-icons.svg" class="details-enhanced  details-plus">
+<body data-icon-sprite="lib/ps-icons/ps-icons.svg" class="details-enhanced  details-plus nav-closed nav-init">
 
 
     <!-- (viewBox(0,100,1000,500))
-    
         <img src="img/fontPreviews/a.svg#abeezee" class="--svg-preview img-font-preview" alt="ABeeZee" loading="lazy">
-    
     -->
 
 
@@ -90,16 +88,17 @@
 
 
             <header class="pst-sticky z-ind-100">
-                <section class="grd grd-1 grd-md-2 gap-0-5em">
+                <section class="grd grd-1 grd-ld-2 gap-0-5em mrg-0-3em mrg-btt">
                     <!-- reset all settings -->
-                    <p>
+                    <p class="mrg-0 mrg-btt">
                         <button type="button" class="btn-default bck-neg wdt-100 txt-cnt" id="btnResetSettings">
                             <span data-icon="close"></span>
-                            Reset all settings</button>
+                            Reset all settings
+                        </button>
                     </p>
 
                     <!-- reset filters -->
-                    <p><button type="button" class="btn-default bck-neg wdt-100 txt-cnt" id="btnResetFilter">
+                    <p class=""><button type="button" class="btn-default bck-neg wdt-100 txt-cnt" id="btnResetFilter">
                             <svg viewBox="0 0 112 100" class="icn-svg icn-reload ">
                                 <use href="#icn-reload"></use>
                             </svg>
@@ -130,6 +129,13 @@
             </details>
             <div id="asideFilter" class="dynamic-content dynamic-content-init">
             </div>
+
+
+            <p>
+                <button class="btn-default btnToggleNav dsp-ld-non mrg-1em mrg-top" id="btnToggleNav">Show Fontlist</button>
+            </p>
+
+
         </aside>
 
         <!-- main -->
@@ -138,6 +144,17 @@
             <article>
                 <nav class="nav-main pst-sticky --bck-clr-wht z-ind-1000">
                     <ul class="ul-nav li-inl fnt-wgh-700">
+                        <li>
+
+                            <button class="btn-inline btnToggleNav" id="btnToggleNav">
+                                <span class="icon-toggle-wrap mrg-0-3em mrg-rgh">
+                                    <span class="icn-svg-2" data-icon="close"></span>
+                                    <span class="icn-svg-1" data-icon="navicon"></span>
+                                </span>
+                                Menu
+                            </button>
+
+                        </li>
                         <li>
                             <label class="labelDarkmode --fnt-wgh-400">
                                 <span class="icon-wrp">
